# precomputed-radiative-heat-transport

./: .gitmodules  CMakeLists.txt  CODING_CONVENTIONS.md  README.md  install_dependecies.bat  makefile  vs_workspace.code-workspace
assets/scenes/: fem-city-surface.gltf
assets/scenes/cornell_box_low_poly/: gltf-v1.gltf
assets/scenes/ecosys/: test-plant-v2.gltf  test-plant-v3.gltf  test-plant-v4.gltf
assets/scenes/thermal-elmer/: two-rings.gltf
assets/scenes/thermal-minimal-test/: 0k-heat-test.gltf  1k-regu-heat-test.gltf  5k-heat-test.blend  5k.blend  5k.gltf  city-anim.blend  city-anim.gltf  closed-dome.blend  closed-dome.gltf  elmer-test.blend  elmer-test.gltf  lens.blend  lens.gltf  mini-city-2-anim-2-highres.blend  mini-city-2-anim-2-highres.gltf  mini-city-2-anim-2-midres.gltf  mini-city-2-anim-2.blend  mini-city-2-anim-2.gltf  mini-city-2-anim.blend  mini-city-2-anim.gltf  mini-city-2-diffuse.blend  mini-city-2-diffuse.gltf  mini-city-2-specular.blend  mini-city-2-specular.gltf  mini-city-2.blend  mini-city-2.gltf  non-uniform-plane-sphere-low.blend  non-uniform-plane-sphere-low.gltf  non-uniform-planes.blend  non-uniform-planes.gltf  non-uniform-spheres-low.blend  non-uniform-spheres-low.gltf  non-uniform-spheres-small-low.blend  non-uniform-spheres-small-low.gltf  open-dome.gltf  refl.blend  refl.gltf  single-box.gltf  thermal-minimal-test-aligned.blend  thermal-minimal-test-aligned.gltf  (+25 more)
assets/shader/convenience/glsl/: as_data.glsl  light_data.glsl  material_data.glsl  texture_data.glsl  vertex_data.glsl
assets/shader/convenience/hlsl/: as_data.hlsl  light_data.hlsl  material_data.hlsl  texture_data.hlsl  vertex_data.hlsl
assets/shader/example_impl/: simple_compute.hlsl
assets/shader/rasterizer_default/: bounding_box.geom  circle.frag  defines.h  shade.frag  tbn_vis.geom
assets/shader/raytracing_default/: defines.h  simple_ray.rahit  simple_ray.rgen  sphere.rint
assets/shader/raytracing_thermal/: defines.h  simple_ray.rahit  simple_ray.rgen  transport_ray.rahit  transport_ray.rgen
assets/shader/utils/: type_conv_def.h  type_conv_undef.h
assets/shader/utils/glsl/: colormap.glsl  pcg32.glsl  pixel_filter.glsl  ray_tracing_utils.glsl  rendering_utils.glsl  spherical_harmonics.glsl  tone_mapping.glsl
assets/shader/utils/hlsl/: bsdfs.hlsl  random.hlsl  ray_tracing_utils.hlsl  spirv_intrinsics.hlsl
include/tamashii/: public.hpp  tamashii.hpp
include/tamashii/cuda_helper/convenience/: geometry_to_gpu.hpp
include/tamashii/cuda_helper/cuo/: cuo.hpp
include/tamashii/engine/common/: cmd_system.hpp  common.hpp  config.hpp  input.hpp  math.hpp  var_system.hpp  (+2 more)
include/tamashii/gui/: imgui_gui.hpp  imgui_impl_x11.h
include/tamashii/implementations/: rasterizer_default.hpp  raytracing_default.hpp
include/tamashii/renderer_vk/: render_backend.hpp  vulkan_instance.hpp
src/: CMakeLists.txt
src/cuda_helper/convenience/: cuda_type_converter.cpp  geometry_to_gpu.cpp
src/cuda_helper/cuo/parts/: buffer.cpp
src/default_implementations/: CMakeLists.txt  rasterizer_default.cpp  raytracing_default.cpp
src/engine/: CMakeLists.txt  tamashii.cpp
src/engine/common/: cmd_system.cpp  common.cpp  config.cpp  input.cpp  math.cpp  var_system.cpp  vars.cpp  window_thread.cpp
src/engine/exporter/: basic.cpp  gltf.cpp  image.cpp
src/engine/importer/: basic.cpp  bsp.cpp  gltf.cpp  ies.cpp  image.cpp  ldt.cpp  obj.cpp  pbrt.cpp  ply.cpp
src/engine/platform/unix/: filewatcher.cpp  system.cpp  window.cpp
src/engine/platform/win32/: filewatcher.cpp  system.cpp  window.cpp
src/engine/render/: render_system.cpp
src/engine/scene/: asset.cpp  camera.cpp  image.cpp  light.cpp  material.cpp  model.cpp  ref_entities.cpp  render_cmd_system.cpp  render_scene.cpp  scene_graph.cpp
src/engine/topology/: find_tangents.cpp  flat_normals.cpp  mikktspace.cpp
src/gui/: CMakeLists.txt  imgui_gui.cpp  imgui_impl_x11.cpp
src/implementations/: CMakeLists.txt
src/implementations/empty/: CMakeLists.txt  main.cpp
src/implementations/example_compute/: CMakeLists.txt  example_impl.cpp  example_impl.hpp
src/implementations/thermal_renderer/: CMakeLists.txt  README.md  main.cpp  thermal_api.cpp  thermal_api.hpp  thermal_common.cpp  thermal_common.hpp  thermal_data.cpp  thermal_data.hpp  thermal_export.cpp  thermal_export.hpp  thermal_gui.cpp  thermal_gui.hpp  thermal_impl.cpp  thermal_impl.hpp  thermal_objects.cpp  thermal_objects.hpp  thermal_renderer.cpp  thermal_renderer.hpp  thermal_renderer_backend.hpp  thermal_scene.cpp  thermal_scene.hpp  thermal_solver.cpp  thermal_solver.hpp  thermal_transport.cpp  thermal_transport.hpp
src/implementations/thermal_renderer/gpl/: solar_position.cpp  solar_position.h
src/renderer_vk/: CMakeLists.txt  render_backend.cpp  vulkan_instance.cpp
src/renderer_vk/convenience/: geometry_to_gpu.cpp  light_to_gpu.cpp  material_to_gpu.cpp  rvk_type_converter.cpp  texture_to_gpu.cpp
src/renderer_vk/gui/: gui.cpp  imgui_vulkan.cpp  imgui_vulkan.hpp
src/rvk/: CMakeLists.txt
src/rvk/include/rvk/: rvk.hpp  shader_compiler.hpp  vk_function_list.inl
src/rvk/include/rvk/parts/: acceleration_structure.hpp  acceleration_structure_bottom_level.hpp  acceleration_structure_top_level.hpp  buffer.hpp  command_buffer.hpp  cuda.hpp  descriptor.hpp  device_logical.hpp  device_physical.hpp  framebuffer.hpp  image.hpp  instance.hpp  pipeline.hpp  pipeline_compute.hpp  pipeline_rasterize.hpp  pipeline_ray_trace.hpp  renderpass.hpp  rvk_public.hpp  sampler_config.hpp  shader.hpp  shader_ray_trace.hpp  swapchain.hpp
src/rvk/src/: helper.cpp  setup.cpp
src/rvk/src/parts/: acceleration_structure.cpp  acceleration_structure_bottom_level.cpp  acceleration_structure_top_level.cpp  buffer.cpp  command_buffer.cpp  command_pool.cpp  descriptor.cpp  device_logical.cpp  device_physical.cpp  image.cpp  instance.cpp  pipeline.cpp  pipeline_compute.cpp  pipeline_rasterize.cpp  pipeline_ray_trace.cpp  renderpass.cpp  rvk_private.hpp  shader.cpp  shader_compiler.cpp  shader_compiler.hpp  shader_ray_trace.cpp  swapchain.cpp
src/tamashii/: CMakeLists.txt  main.cpp
(+36 files in other folders)
